--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>JGK Assignment</title>
-    <meta name ="viewport" content="user-scalable = yes, initial-scale=1, width=800">
+    <meta name ="viewport" content="user-scalable = yes, initial-scale=1, width=width-device">
     <script src = "jquery-3.5.1.min.js"></script>
     <style>
         .content {
