--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         .content {
             display: block;
-           
+            margin: auto;
             padding-top: 90px;
         }
         #header {
@@ -62,9 +62,7 @@
     <div id="content1" class="content">
         <div id ="header"><h1>JGK의 자기소개</h1></div>
         <div>
-            <div style = "float: left">
-                <img src = "https://menu.moneys.co.kr/moneyweek/thumb/2020/12/17/06/2020121718238021068_2.jpg" width="300">
-            </div>
+                <img src = "https://menu.moneys.co.kr/moneyweek/thumb/2020/12/17/06/2020121718238021068_2.jpg" width="300" style="float: left">
             <div>
                 <h3>간단한 소개</h3>
                 <p>안녕하세요 제 이름은 김재건입니다. 컴퓨터공학과 2학년 학생입니다. 나이는 23살이고 군대는 다녀왔습니다.</p>
